--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>2016Fall CPA 計算機程式課程</h1>
+					<h1>40423105 簡報</h1>
 					<h3>The HTML Presentation Framework</h3>
 					<p>
 						<small>Created by <a href="http://hakim.se">Hakim El Hattab</a> / <a href="http://twitter.com/hakimel">@hakimel</a></small>
@@ -50,9 +50,8 @@
 				</section>
 
 				<section>
-					<h2>github_intro</h2>
-<iframe src="https://player.vimeo.com/video/183950627" width="640" height="492" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-<p><a href="https://vimeo.com/183950627">2016-09-23_cpb_github_intro</a> from <a href="https://vimeo.com/user24079973">虎尾科大機械設計工程</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+					<h2>9/29成果影片</h2>
+<iframe src="https://player.vimeo.com/video/185029053" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="https://vimeo.com/185029053">畫圖</a> from <a href="https://vimeo.com/user44512429">40423105</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 				</section>
 				
                                <section>
