--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<div class="slides">
 				<section>
 					<h1>40423105 簡報</h1>
-					<h3>The HTML Presentation Framework</h3>
+					<h3>設計二甲 第三組</h3>
 					<p>
 						<small>Created by <a href="http://hakim.se">Hakim El Hattab</a> / <a href="http://twitter.com/hakimel">@hakimel</a></small>
 					</p>
