--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 				<section>
 					<h2>9/29成果影片</h2>
 <iframe src="https://player.vimeo.com/video/185029053" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="https://vimeo.com/185029053">畫圖</a> from <a href="https://vimeo.com/user44512429">40423105</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+					<p>心得 : 這是我第一次用這個軟體 不過很快就抓到訣竅了.</p>
 				</section>
 				
                                <section>
