--- a/index.html
+++ b/index.html
@@ -56,9 +56,12 @@
 				</section>
 				
                                <section>
-					<h2>fork_pull_requests</h2>
-				<iframe src="https://player.vimeo.com/video/183954581" width="640" height="492" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-<p><a href="https://vimeo.com/183954581">2016-09-23_fork_pull_requests</a> from <a href="https://vimeo.com/user24079973">虎尾科大機械設計工程</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+					<h2>10/27成果</h2>
+				<a href="http://imgur.com/POn3cgs"><img src="http://i.imgur.com/POn3cgs.png" height="250" width="500"title="source: imgur.com" /></a>
+<p> 心得:可以非常簡易的畫出四連桿運動的路線</p>
+<p>Solvespace 四連桿圖檔:</p>
+<p><a href="./../w7/40423105 w7.csv">40423105 w7.csv</a> (請以滑鼠右鍵存檔)</p>
+<p><a href="./../w7/40423105 w7.slvs">40423105 w7.slvs</a> (請以滑鼠右鍵存檔)</p>
                               </section>
                               
 				<!-- Example of nested vertical slides -->
