--- a/index.html
+++ b/index.html
@@ -45,14 +45,15 @@
 					<h3>設計二甲 第三組</h3>
 					<p>
 						<small>Created by <a href="http://hakim.se">Hakim El Hattab</a> / <a href="http://twitter.com/hakimel">@hakimel</a></small>
-					</p>
-                    <a href="blog/index.html">blog</a>
+	                                            </p><a href="blog/index.html">blog</a>
+<iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2F40423105.github.io%2F2016fallcadp_hw%2F%23%2F&width=200&layout=standard&action=like&show_faces=true&share=true&height=80&appId" width="200" height="80" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
 				</section>
 
 				<section>
 					<h2>9/29成果影片</h2>
 <iframe src="https://player.vimeo.com/video/185029053" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="https://vimeo.com/185029053">畫圖</a> from <a href="https://vimeo.com/user44512429">40423105</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 					<p>心得 : 這是我第一次用這個軟體 不過很快就抓到訣竅了.</p>
+                    <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2F40423105.github.io%2F2016fallcadp_hw%2F%23%2F&width=200&layout=standard&action=like&show_faces=true&share=true&height=80&appId" width="200" height="80" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
 				</section>
 				
                                <section>
@@ -62,6 +63,7 @@
 <p>Solvespace 四連桿圖檔:</p>
 <p><a href="./../w7/40423105 w7.csv">40423105 w7.csv</a> (請以滑鼠右鍵存檔)</p>
 <p><a href="./../w7/40423105 w7.slvs">40423105 w7.slvs</a> (請以滑鼠右鍵存檔)</p>
+<iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2F40423105.github.io%2F2016fallcadp_hw%2F%23%2F&width=200&layout=standard&action=like&show_faces=true&share=true&height=80&appId" width="200" height="80" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
                               </section>
                               
 				<!-- Example of nested vertical slides -->
