--- a/data/threejs/404231051124.html
+++ b/data/threejs/404231051124.html
@@ -1,9 +1,30 @@
 
 <!DOCTYPE html>
+<script type="text/javascript">
+init_mathjax = function() {
+    if (window.MathJax) {
+        // MathJax loaded
+        MathJax.Hub.Config({
+            tex2jax: {
+                inlineMath: [ ['$','$'], ["\\(","\\)"] ],
+                displayMath: [ ['$$','$$'], ["\\[","\\]"] ]
+            },
+            displayAlign: 'left', // Change this to 'center' to center equations.
+            "HTML-CSS": {
+                styles: {'.MathJax_Display': {"margin": 0}}
+            }
+        });
+        MathJax.Hub.Queue(["Typeset",MathJax.Hub]);
+    }
+}
+init_mathjax();
+</script>
 <html lang="en">
   <head>
     <meta charset="utf-8"></meta>
     <title>Three.js Solvespace Mesh</title>
+        <script src="http://threejs.org/build/three.js"></script>
+    <script src="http://hammerjs.github.io/dist/hammer.js"></script>
     <style type="text/css">
     body { margin: 0; overflow: hidden; }
     </style>
